use stable kotlin version